# secure-rag-mvp

./: .gitignore  Dockerfile  PORTFOLIO.md  QUICKSTART.md  README.md  SESSION_NOTES.md  TEST_QUERIES.md  check_chunks.py  docker-compose.yml  pyproject.toml  setup.sh
app/: answer.py  api.py  chunker.py  embedding.py  embedding_local.py  hybrid_search.py  main.py  models.py  retrieve.py  text_extraction.py
eval/: README.md  analyze_results.py  questions.jsonl  run_evaluation.py  scoring.py
migrations/: env.py
migrations/versions/: d55e58ddf26f_initial_schema_with_pgvector.py
sample_docs/: Contract_SVC_0089.txt  Invoice_FV_2025_0847.txt  SETUP.md  SmartHome_Manual.txt
tests/: questions.py  scoring.py  test_api.py  test_health.py
