[tool.poetry]
name = "secure-rag-mvp"
version = "0.1.0"
description = "RAG MVP with FastAPI, Postgres, pgvector"
authors = ["Andrzej <andrzej@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.0"
uvicorn = "^0.27.0"
psycopg2-binary = "^2.9.9"
alembic = "^1.13.1"
pydantic = "^2.6.0"
pypdf = "^4.0.0"
pdfplumber = "^0.10.3"
openai = "^1.12.0"
pgvector = "^0.2.1"
sqlalchemy = "^2.0.46"
python-multipart = "^0.0.22"
sentence-transformers = "^5.2.2"
requests = "^2.31.0"
rank-bm25 = "^0.2.2"
python-dotenv = "^1.2.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
